<package>
	<name>Compass</name>
	<version>0.1.0</version>
	<description>Roboboat compass module</description>
	<maintainer email="ktbarrett.connectflour@gmail.com">Kaleb Barrett</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>rospy</run_depend>
	<run_depend>message_runtime</run_depend>

</package>
